--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta property="og:title" content="Salmon Wallet">
   <meta property="og:site_name" content="salmonwallet.io">
   <meta property="og:url" content="https://salmonwallet.io/">
-  <meta property="og:description" content="Salmon Wallet is the Solana open souce wallet.">
+  <meta property="og:description" content="Salmon Wallet is the Solana open source wallet.">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://salmonwallet.io/images/logo.png">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
